tests/parser/statement_while_err2.expected
Syntax Error: line 4:
Unexpected token (TOK_KEY_DO, 'do'), likely missing a(n)  
  'TOK_LPAREN' or
  'TOK_KEY_NOT' or
Possibly due to malformed or missing:
  Non-terminal: 'While Statement' or
  Non-terminal: 'Condition'
