tests/parser/statement_while_err2.mtp
begin

	(* while statement: missing condition *)
	while do
		sample := sample + 1
end
.